--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ strong{
     text-align: center;
 }
 
+.about1 {
+    font-family: "Raleway", sans-serif;
+    background-color: #333;
+    text-align: center;
+}
+
 .about h2 {
     font-family: "Raleway", sans-serif;
     font-size: 2.5rem;
